--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "node build.js",
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+  "node": "14.x"
+},
   "author": "",
   "license": "ISC",
   "dependencies": {
