--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,9 @@
  {
+  "version": 2,
+  "builds": [
+    { "src": "api/**/*.js", "use": "@vercel/node" }
+  ],
    "name": "tandilyans_back",
-   "builds": [
-     {
-       "src": "index.js",
-       "use": "@vercel/node"
-     }
-   ],
    "routes": [
      {
        "src": "/(.*)",
