--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # MONGO_URI="mongodb+srv://ashotpoghosyan380:cG4nmfHBO85rw57C@cluster0.60kqp.mongodb.net/Tandilyans"
-MONGO_URI=mongodb+srv://ashotpoghosyan380:1j0DHX3DD6b7MfNa@mymongodb.v99gg.mongodb.net/mymongodb?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://ashotpoghosyan380:1j0DHX3DD6b7MfNa@mymongodb.v99gg.mongodb.net/mymongodb?retryWrites=true&w=majority&?connectTimeoutMS=30000&socketTimeoutMS=45000
