--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.3",
+    "buffer": "^6.0.3",
+    "Buffer": "^0.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
     "mongoose": "^8.6.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
+    "url": "^0.11.4",
     "uuid": "^10.0.0"
   }
 }
