--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 MONGO_URI="mongodb+srv://ashotpoghosyan380:cG4nmfHBO85rw57C@cluster0.60kqp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 PORT=4000
 
-CLOUDINARY_CLOUD_NAME=Tandilyan
-CLOUDINARY_API_KEY=666978848971866
-CLOUDINARY_API_SECRET=QhxAQgzNICtFU6YG4Poh61arzNs
+# CLOUDINARY_CLOUD_NAME=Tandilyan
+# CLOUDINARY_API_KEY=666978848971866
+# CLOUDINARY_API_SECRET=QhxAQgzNICtFU6YG4Poh61arzNs
 
 
 
