--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
+    "path": "^0.12.7",
     "url": "^0.11.4",
     "uuid": "^10.0.0"
   }
