--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,11 @@
        "src": "/(.*)",
        "dest": "index.js"
      }
-   ]
+   ],
+
+   "functions": {
+    "api/products.js": {
+      "runtime": "nodejs16.x" 
+    }
+  }
  }
