--- a/.env
+++ b/.env
@@ -2,10 +2,8 @@ MONGO_URI="mongodb+srv://ashotpoghosyan380:cG4nmfHBO85rw57C@cluster0.60kqp.mongo
 PORT=4000
 CLOUDINARY_CLOUD_NAME=dcdkmgzay
 CLOUDINARY_UPLOAD_PRESET=dnjszqmo
-
-# CLOUDINARY_CLOUD_NAME=Tandilyan
-# CLOUDINARY_API_KEY=666978848971866
-# CLOUDINARY_API_SECRET=QhxAQgzNICtFU6YG4Poh61arzNs
+GMAIL_USER=ashotpoghosyan380@gmail.com
+GMAIL_PASSWORD=utriacrgjunftuvf
 
 
 
